--- a/src/frontend/src/style/applies.css
+++ b/src/frontend/src/style/applies.css
@@ -311,7 +311,7 @@
     @apply hover:text-accent-foreground hover:transition-all;
   }
   .generic-node-desc {
-    @apply h-full px-5 mb-4 w-full text-foreground;
+    @apply mb-4 h-full w-full px-5 text-foreground;
   }
   .generic-node-desc-text {
     @apply w-full text-sm text-muted-foreground;
@@ -1040,7 +1040,7 @@
 
   .fade-container::before,
   .fade-container::after {
-    @apply pointer-events-none absolute bottom-0 top-0 bg-gradient-to-r to-transparent from-background;
+    @apply pointer-events-none absolute bottom-0 top-0 bg-gradient-to-r from-background to-transparent;
     content: "";
     width: 50px;
     opacity: 0;
@@ -1083,5 +1083,9 @@
 
   .scroll-container {
     @apply flex overflow-x-scroll scrollbar-hide;
+  }
+
+  .store-beta-icon {
+    @apply relative bottom-3 left-1 ml-2 rounded-full bg-beta-background px-2 py-1 text-center text-xs font-semibold text-beta-foreground;
   }
 }
