--- a/src/frontend/src/style/applies.css
+++ b/src/frontend/src/style/applies.css
@@ -422,7 +422,7 @@
     @apply block w-full truncate bg-background;
   }
   .dropdown-component-arrow {
-    @apply pointer-events-none absolute inset-y-0 right-0 flex items-center pr-2;
+    @apply pointer-events-none absolute inset-y-0 flex items-center pr-2;
   }
   .dropdown-component-arrow-color {
     @apply extra-side-bar-save-disable h-5 w-5;
