--- a/src/frontend/src/style/applies.css
+++ b/src/frontend/src/style/applies.css
@@ -296,7 +296,7 @@
     @apply generic-node-status text-status-green;
   }
   .gray-status {
-    @apply generic-node-status text-muted-foreground;
+    @apply generic-node-status text-status-gray;
   }
 
   .red-status {
