Fix: left tab dont scroll on chat view

--- a/src/frontend/src/style/applies.css
+++ b/src/frontend/src/style/applies.css
@@ -851,7 +851,7 @@
     @apply flex items-center justify-between px-2 py-2;
   }
   .api-modal-tabs-content {
-    @apply -mt-1 h-full w-full overflow-hidden px-4 pb-4;
+    @apply -mt-1 h-full w-full  px-4 pb-4;
   }
   .api-modal-accordion-display {
     @apply mt-2 flex h-full w-full;
