--- a/src/frontend/src/style/index.css
+++ b/src/frontend/src/style/index.css
@@ -27,6 +27,7 @@
     --radius: 0.5rem;
     --ring: 215 20.2% 65.1%; /* hsl(215 20% 65%) */
     --round-btn-shadow: #00000063;
+    --ice: #31a3cc;
 
     --error-background: #fef2f2;
     --error-foreground: #991b1b;
@@ -67,6 +68,7 @@
   .dark {
     --background: 224 35% 7.5%; /* hsl(224 40% 10%) */
     --foreground: 213 31% 80%; /* hsl(213 31% 91%) */
+    --ice: #60A5FA;
 
     --muted: 223 27% 11%; /* hsl(223 27% 11%) */
     --muted-foreground: 215.4 16.3% 56.9%; /* hsl(215 16% 56%) */
