--- a/src/frontend/src/style/applies.css
+++ b/src/frontend/src/style/applies.css
@@ -116,6 +116,9 @@
   .extra-side-bar-buttons {
     @apply relative inline-flex w-full items-center justify-center rounded-md bg-background px-2 py-2 text-foreground transition-all duration-500 ease-in-out;
   }
+  .header-menubar-item {
+    @apply relative flex cursor-default select-none items-center rounded-sm px-2 py-1.5 text-sm outline-none transition-colors hover:bg-accent hover:text-accent-foreground data-[disabled]:pointer-events-none data-[disabled]:opacity-50 cursor-pointer;
+  }
   .extra-side-bar-buttons:hover {
     @apply hover:bg-muted;
   }
