--- a/src/frontend/src/style/index.css
+++ b/src/frontend/src/style/index.css
@@ -51,7 +51,7 @@
     --component-icon: #d8598a;
     --flow-icon: #2f67d0;
     --hover: #F2F4F5;
-
+    --disabled-run: #6366f1;
     
 
     /* Colors that are shared in dark and light mode */
@@ -73,6 +73,7 @@
     --foreground: 213 31% 80%; /* hsl(213 31% 91%) */
     --ice: #60A5FA;
     --hover: #1A202E;
+    --disabled-run: #6366f1;
 
     --muted: 223 27% 11%; /* hsl(223 27% 11%) */
     --muted-foreground: 215.4 16.3% 56.9%; /* hsl(215 16% 56%) */
