Fix dropdown on nodes (#1569)
* Fixed dropdown overflow issue by changing it to ShadCN

* Changed name of API modal

* Fixed border on API Modal

--- a/src/frontend/src/style/applies.css
+++ b/src/frontend/src/style/applies.css
@@ -480,7 +480,7 @@
     @apply absolute inset-y-0 right-0 flex items-center pr-4;
   }
   .dropdown-component-check-icon {
-    @apply h-5 w-5 text-black;
+    @apply h-5 w-5 text-primary;
   }
 
   .edit-flow-arrangement {
